--- a/AdventOfCode2021.CSharp.csproj
+++ b/AdventOfCode2021.CSharp.csproj
@@ -21,6 +21,8 @@
 
   <ItemGroup>
     <Using Include="Xunit" />
+    <Using Include="System.Collections.Generic" />
+    <Using Include="System.Linq" />
   </ItemGroup>
 
 </Project>
